# PlexMetaForge

./: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
scripts/: post-build.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  settings.rs
src-tauri/src/database/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/generator/: mod.rs  templates.rs
src-tauri/src/metadata/: mod.rs  nfo.rs  plex_api.rs  sqlite_direct.rs
src-tauri/src/scanner/: mod.rs
src-tauri/src/store/: mod.rs
src/app/: layout.tsx
src/app/code-editor/: page.tsx
src/app/dashboard/: page.tsx
src/app/database/: page.tsx
src/app/editor/: page.tsx
src/app/store/: page.tsx
src/components/: CodeEditor.tsx  MediaTree.tsx  MetadataForm.tsx  PluginCreator.tsx  StatusBadge.tsx
src/lib/: commands.ts  types.ts
src/styles/: globals.css
